[package]
name = "gameboy-rust"
version = "0.1.0"
edition = "2021"
authors = ["Johan Lindskogen <johan.lindskogen@gmail.com>"]

[dependencies]
bitflags = "1.3.2"
bit_field = "0.10.1"
minifb = "0.25.0"
image = "0.24.5"
cpal = "0.15.2"

serde = { version = "1.0", features = ["derive"] }

serde_cbor = "0.11.2"
serde_arrays = "0.1.0"


[lib]
name = "dmg"
path = "src/lib.rs"
